# causa-language-models-scratch

./: README.md  config.json  config.toml  prepare.py  pyproject.toml  tokenizer.json  train.py  train_tokenizer.py  transformer.ipynb
config/: gpt2.toml  vanilla.toml
models/: __init__.py  _gpt2.py  _vanilla_transformer.py
models/layers/: __init__.py  _attention.py  _attentions.py  _ffn.py  _pe.py
trained/: tokenizer.json
utils/: __init__.py  _config.py  _dataloader.py  _dataset.py  _generate.py  _optimizer.py  _tokenizer.py  _utils.py
