[project]
name = "deep-learning-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "jupyter>=1.1.1",
    "schedulefree>=1.4.1",
    "tokenizers>=0.22.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
